#470 wip core module + composable module

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -8,7 +8,7 @@ import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Example stories/Introduction" />
+<Meta title="Introduction" />
 
 <style>
   {`
